--- a/src/credit/templates/userRegisterPhone.tpl.html
+++ b/src/credit/templates/userRegisterPhone.tpl.html
@@ -40,7 +40,7 @@
             <label for="name" class="col-sm-2 col-form-label col-form-label-lg">Имя Отчество</label>
             <div class="col-sm-10">
                 <input id="name" class="form-control form-control-lg" name="name" value="<?=$form->getDisplayValue('name')?>" type="name">
-                <small class="form-text text-muted">Ваше имя будет отображаться у Ваших предложений и в переписке с партнерами</small>
+                <small class="form-text text-muted">Ваше имя будет отображаться у Ваших компаний и в переписке с партнерами</small>
             </div>
         </div>
         
