--- a/src/user/templates/main.tpl.html
+++ b/src/user/templates/main.tpl.html
@@ -16,6 +16,18 @@
         <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_START, 'return' => $curl))?>">регистрация</a>
         <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>">восстановить пароль</a>
     <? } ?>
+    
+    <h1 class="display-4">Уникальное предложение для заемщиков</h1>
+        
+    <ul>
+        <li>быстрое получение займа</li>
+        <li>минимальный пакет документов (полный комплект документов необходим только на предмет залога)</li>
+        <li>выгодные условия, т. к. можно выбрать наиболее комфортное предложение от различных кредитных организаций</li>
+        <li>удобно получить сразу несколько различных предложений в одном месте и выбрать наиболее подходящее</li>
+        <li>доступно для заемщиков с плохой кредитной историей или без кредитной истории</li>
+        <li>не требуется подтверждение работы и дохода, подходит для людей официально не устроенных или не имеющих официального дохода, для индивидуальных предпринимателей и самозанятых</li>
+    </ul>
+        
 </main>
 
-<? $partViewer->view('parts/header'); ?>
+<? $partViewer->view('parts/footer'); ?>
