--- a/src/credit/templates/userRegisterStart.tpl.html
+++ b/src/credit/templates/userRegisterStart.tpl.html
@@ -27,6 +27,14 @@
         </div>
     <? } ?>
     
+    <? if (!$process) { ?>
+        <div id="alert-block" class="alert alert-secondary" role="alert">
+            <h4>Уже зегистрировались?</h4>
+            <hr />
+            <p class="mb-0">Вы можете переходить на <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGIN, 'return' => $curl, 'go' => $go))?>" class="alert-link">страницу авторизации</a>, если не помните пароль - воспользуйтесь <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>" class="alert-link">восстановлением</a>.</p>
+        </div>
+    <? } ?>  
+    
     <form action="" method="POST" class="">
         <input type="hidden" name="response" value="" id="google-response" />
         
