--- a/src/invest/templates/investorOfferEditorDelete.tpl.html
+++ b/src/invest/templates/investorOfferEditorDelete.tpl.html
@@ -10,7 +10,7 @@
     
     <div class="col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2">
     
-    <h1 class="mb-5">Редактор предложений инвестирования</h1>
+    <h1 class="mb-5">Редактор предложений</h1>
     
     <? if ($form->getTextualErrors()) { ?>
     <div id="alert-block" class="alert alert-danger" role="alert">
