--- a/src/invest/templates/userRegisterStart.tpl.html
+++ b/src/invest/templates/userRegisterStart.tpl.html
@@ -23,9 +23,17 @@
             <h4>Вы уже зарегистрированы!</h4>
             <hr />
             <p>Пользователь с таким email уже зарегистрирован у нас на портале</p>
-            <p class="mb-0">Вы можете переходить на <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGIN, 'return' => $curl))?>" class="alert-link">страницу авторизации</a>, пароль для входа мы отправляли Вам на почту <strong><?=$userExists->getEmail()?></strong> при регистрации. Если не можете найти письмо - воспользуйтесь <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>" class="alert-link">восстановлением пароля</a>.</p>
+            <p class="mb-0">Вы можете переходить на <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGIN, 'return' => $curl, 'go' => $go))?>" class="alert-link">страницу авторизации</a>, пароль для входа мы отправляли Вам на почту <strong><?=$userExists->getEmail()?></strong> при регистрации. Если не можете найти письмо - воспользуйтесь <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>" class="alert-link">восстановлением пароля</a>.</p>
         </div>
     <? } ?>
+    
+    <? if (!$process) { ?>
+        <div id="alert-block" class="alert alert-secondary" role="alert">
+            <h4>Уже зегистрировались?</h4>
+            <hr />
+            <p class="mb-0">Вы можете переходить на <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGIN, 'return' => $curl, 'go' => $go))?>" class="alert-link">страницу авторизации</a>, если не помните пароль - воспользуйтесь <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_RECOVERY, 'return' => $curl))?>" class="alert-link">восстановлением</a>.</p>
+        </div>
+    <? } ?>    
     
     <form action="" method="POST" class="">
         <input type="hidden" name="response" value="" id="google-response" />
