--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -1,28 +1,68 @@
 <? $partViewer->view('parts/header'); ?>
 
-<main role="main" class="container flex-shrink-0">
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="<?=CommonUtils::makeUrl('main')?>">Главная</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Панель управления</li>
-        </ol>
-    </nav>
+    <? if ($hasCredit) { ?>
+    <main role="main" class="container flex-shrink-0">
+        <p>Информация для тех, у кого есть или были кредиты или запросы на кредиты</p>
+        <ul>
+            <li>текущие сделки (активные) с датами и суммами предстоящих платежей</li>
+            <li>предложения от кредиторов (с перепиской)</li>
+            <li>рейтинг как заемщика и отзывы</li>
+            <li>история запросов и история сделок</li>
+        </ul>
         
-    <p>Авторизован как <strong><?=htmlspecialchars(SecurityManager::getUser()->getName())?></strong> <a href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGOUT, 'return' => $curl))?>">выход</a></p>
+        <hr />    
     
-    <hr />
-    
-    <h1>Заемщик</h1>
-    
-    <p>мои заявки на займ</p>
-    <ul>
-        <li>текущие сделки (активные) с датами и суммами предстоящих платежей</li>
-        <li>предложения от кредиторов (с перепиской)</li>
-        <li>рейтинг как заемщика и отзывы</li>
-        <li>история запросов и история сделок</li>
-    </ul>  
-    
-    <hr />
-</main>
+        <div class="row flex-row mb-4">
+            <div class="col-12 col-sm-9 col-md-10"><h1 class="">Мои запросы</h1></div>    
+            <div class="col-12 col-sm-3 col-md-2 justify-content-center justify-content-sm-end text-center text-sm-right align-self-center">
+                <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_START, 'return' => $curl))?>" class="btn btn-primary">подать заявку</a>
+            </div>
+        </div>    
+
+        <? if ($isAdded) { ?>
+            <div class="alert alert-warning" role="alert">
+                <h4>Ваша заявка уже в работе</h4>
+                <hr />
+                <p class='mb-0'>Дождитесь звонка от сотрудника портала и затем кредитных организации для проверки данных.</p>
+            </div>
+        <? } ?>
+        
+        <? if ($list) { ?>
+            <div class="row">
+            <? foreach($list as $item) { ?>
+                <div class='<?=(count($list) == 1 ? 'col-12' : (count($list) % 3 == 0 ? 'col-12 col-md-4' : 'col-12 col-md-6') )?> mb-3'>
+                <div class="card border-warning h-100">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <strong><?=htmlspecialchars($item->getName())?></strong>
+                        </p>
+                        <p class="card-text">Залог <?=htmlspecialchars($item->getCategory()->getName())?>, сумма <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></p>
+                    </div>
+                </div>
+                </div>
+            <? } ?>
+            </div>
+        <? } else { ?>
+            <div class="card">
+              <div class="card-body">
+                <p class="my-4 text-center">еще ничего не добавлено&hellip;</p>
+              </div>
+            </div>    
+        <? } ?>        
+        
+        
+    </main>
+    <? } else { ?>
+    <main role="main" class="container d-flex flex-shrink-0 h-100 align-items-center justify-content-center">
+        <div class="jumbotron mb-0">
+            <div class="container">
+                <h1>Добро пожаловать!</h1>
+                <p>Здесь будет отображаться информация по Вашим действующим кредитам и история запросов.</p>
+                <p>Что бы получить деньги скорее - отправьте заявку прямой сейчас</p>
+                <p class="mb-0 text-center"><a class="btn btn-info btn-lg mt-4" href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_START, 'return' => $curl))?>" role="button">подать заявку</a></p>
+            </div>
+        </div>        
+    </main>
+    <? } ?>
 
 <? $partViewer->view('parts/footer'); ?>
