Закончил с пользовательской фронт частью запросов на кредит

--- a/src/credit/templates/main.tpl.html
+++ b/src/credit/templates/main.tpl.html
@@ -7,6 +7,8 @@
         <h1>Кредитным организациям</h1>
         <h4>Мы предлагаем получать заявки от заемщиков, с возможностью привлечения средств под сделку от инвесторов.</h4>
         <p>Увеличьте свой поток клиентов и уменьшите расходы с нами</p>
+        
+        <p class="mb-0 text-center d-md-none"><a class="btn btn-info btn-lg mt-4" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_START, 'return' => $curl, 'go' => base64_encode( CommonUtils::makeUrl('controlPanel') )))?>" role="button">присоединиться</a></p>
     </div>
 </div>    
     
