--- a/src/invest/templates/main.tpl.html
+++ b/src/invest/templates/main.tpl.html
@@ -7,6 +7,8 @@
         <h1>Инвесторам</h1>
         <h4>Мы предлагаем высокодоходные инвестиции в микрофинансовые организации с минимальными рисками.</h4>
         <p>Делайте выгодные вложения в высокомаржинальный бизнес</p>
+        
+        <p class="mb-0 text-center d-md-none"><a class="btn btn-info btn-lg mt-4" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_START, 'return' => $curl, 'go' => base64_encode( CommonUtils::makeUrl('controlPanel') )))?>" role="button">присоединиться</a></p>
     </div>
 </div>    
     
