--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -12,7 +12,7 @@
         
         <hr />    
     
-        <div class="row flex-row mb-4">
+        <div class="row flex-row mb-4" id="requestList">
             <div class="col-12 col-sm-9 col-md-10"><h1 class="">Мои запросы</h1></div>    
             <div class="col-12 col-sm-3 col-md-2 justify-content-center justify-content-sm-end text-center text-sm-right align-self-center">
                 <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_START, 'return' => $curl))?>" class="btn btn-primary">подать заявку</a>
@@ -21,7 +21,7 @@
 
         <? if ($isAdded) { ?>
             <div class="alert alert-warning" role="alert">
-                <h4>Ваша заявка уже в работе</h4>
+                <h4>Ваша заявка получена</h4>
                 <hr />
                 <p class='mb-0'>Дождитесь звонка от сотрудника портала и затем кредитных организации для проверки данных.</p>
             </div>
@@ -30,13 +30,18 @@
         <? if ($list) { ?>
             <div class="row">
             <? foreach($list as $item) { ?>
-                <div class='<?=(count($list) == 1 ? 'col-12' : (count($list) % 3 == 0 ? 'col-12 col-md-4' : 'col-12 col-md-6') )?> mb-3'>
-                <div class="card border-warning h-100">
-                    <div class="card-body">
-                        <p class="card-text">
-                            <strong><?=htmlspecialchars($item->getName())?></strong>
+                <div class='<?=(count($list) == 1 ? 'col-12' : (count($list) == 2 ? 'col-12 col-md-6' : 'col-12 col-md-6 col-lg-4') )?> mb-3'>
+                <div class="card <?=$item->getStatus()->getId()==CreditRequestStatus::TYPE_INCOME?'border-secondary':($item->getStatus()->getId()==CreditRequestStatus::TYPE_CONCIDERED?'border-warning': (in_array($item->getStatus()->getId(), array(CreditRequestStatus::TYPE_APPROVE, CreditRequestStatus::TYPE_CONFIRM, CreditRequestStatus::TYPE_SUCCESS))?'border-success': ($item->getStatus()->getId()==CreditRequestStatus::TYPE_REJECT?'border-danger' : 'border-dark') ) )?> h-100">
+                    <div class="card-body"> 
+                        <h5 class="card-title"><?=htmlspecialchars($item->getName())?></h5>
+                        <? if (!$item->getType()->isFiz()) { ?><h6 class="card-subtitle mb-2 text-muted">ОГРН: <?=$item->getOgrn()?></h6><? } ?>
+                        <h6 class="card-subtitle mb-2 text-<?=$item->getStatus()->getId()==CreditRequestStatus::TYPE_INCOME?'secondary':($item->getStatus()->getId()==CreditRequestStatus::TYPE_CONCIDERED?'warning': (in_array($item->getStatus()->getId(), array(CreditRequestStatus::TYPE_APPROVE, CreditRequestStatus::TYPE_CONFIRM, CreditRequestStatus::TYPE_SUCCESS))?'success': ($item->getStatus()->getId()==CreditRequestStatus::TYPE_REJECT?'danger' : 'dark') ) )?>"><?=$item->getStatus()->getName()?></h6>
                         </p>
-                        <p class="card-text">Залог <?=htmlspecialchars($item->getCategory()->getName())?>, сумма <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></p>
+                        <p class="card-text my-2"><?=htmlspecialchars($item->getCategory()->getName())?><br />Сумма <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></p>
+                        <p class="card-text small mb-0"><?=nl2br(ViewTextUtils::getStrippedText(htmlspecialchars($item->getText()), 192, ViewTextUtils::STRIP_TEXT_PATTERN, '&hellip;'))?></p>
+                    </div>
+                    <div class='card-footer'>
+                        <p class='text-center mb-0'><a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => CommandContainer::ACTION_DELETE, 'id' => $item->getId(), 'return' => $curl))?>" class="card-link"><i class="far fa-trash-alt mr-2"></i>удалить</a></p>
                     </div>
                 </div>
                 </div>
