--- a/src/user/templates/creditRequestEditorConfirm.tpl.html
+++ b/src/user/templates/creditRequestEditorConfirm.tpl.html
@@ -134,7 +134,7 @@
         
         <div class="form-group row">
             <div class="offset-sm-2 col-sm-10 d-flex justify-content-between">
-                <button type="submit" class="btn btn-lg btn-success mr-2 mb-2">продолжить</button>
+                <button type="submit" class="btn btn-lg btn-success mr-2 mb-2">отправить</button>
                 <button type="submit" name="cancel" class="btn btn-lg btn-link mb-2">отменить</button>
             </div>
         </div>
