--- a/src/admin/templates/userRegisterLogin.tpl.html
+++ b/src/admin/templates/userRegisterLogin.tpl.html
@@ -43,6 +43,12 @@
                     <hr />
                     <p class="mb-0">Мы обновили Ваш пароль и отправили его на почту, указанную при регистрации. Если не видите письма, проверьте, возможно оно попало в Спам.</p>
                 </div>
+            <? } elseif ($form->getValue('pact') == 3) {  ?>
+                <div id="warning-block" class="alert alert-success" role="alert">
+                    <h4>Ваш пароль обновлен</h4>
+                    <hr />
+                    <p class="mb-0">Мы обновили Ваш пароль и отправили его в SMS, на номер телефона указанный при регистрации.</p>
+                </div>
             <? } ?>
         <? } elseif ($form->getValue('needAuth')) { ?>
             <div id="warning-block" class="alert alert-warning" role="alert">
